	* src/gpodder/config.py: Add configuration options that support the
	tray icon, notification bubble and automatic update/close functions
	* src/gpodder/gui.py: Support the tray icon in the GUI; link the
	configuration options with the preferences dialog; re-work the channel
	update dialog to be more slipstreamed
	* src/gpodder/trayicon.py: Added new tray icon module by
	Jérôme Chabod <jerome.chabod@ifrance.com>

Wed, 09 Jan 2008 23:09:54 +0100 <thp@perli.net>
Updated Swedish translation by Anders Kvist

	* data/po/sv.po: Swedish translation updated by
	Anders Kvist <kvistkvist@telia.com>

Wed, 09 Jan 2008 11:52:23 +0100 <thp@perli.net>
Use os.rename to make channel list saving atomic

	* src/gpodder/opml.py: Make the saving of the channel list atomic by
	first saving it to a temporary file and then using os.rename to really
	move the file in place (this should make the channel list saving very
	stable and protect against certain bad system conditions where the
	channel list is emptied); thanks to Jens Thiele <karme@berlios.de> for
	the suggestion and pointers to improve the channel saving code

Sat, 05 Jan 2008 15:34:23 +0100 <thp@perli.net>
Make logging in libpodcasts less verbose

	* src/gpodder/libpodcasts.py: Remove some verbose logging code

Wed, 02 Jan 2008 15:39:04 +0100 <thp@perli.net>
Migrate from channels.xml (from 0.9.4) to channels.opml if needed

	* src/gpodder/libgpodder.py: Add code to check if channels.xml exists
	but channels.opml doesn't and if so, try to convert from channels.xml
	to channels.opml, so users upgrading from 0.9.4 directly will have
	their channel list automatically converted;
	thanks to Tim Michelsen for the bug report and helpful Ubuntu info

Tue, 01 Jan 2008 23:32:50 +0100 <thp@perli.net>
Add download completion notification support

	* src/gpodder/download.py: Notify the download status manager when a
	download has been completed successfully
	* src/gpodder/services.py: Add download-complete signal to list of