@@ -10,7 +10,8 @@ Merge tray icon and notification patch by Jérôme Chabod
 	configuration options with the preferences dialog; re-work the channel
 	update dialog to be more slipstreamed
 	* src/gpodder/trayicon.py: Added new tray icon module by
-	Jérôme Chabod <jerome.chabod@ifrance.com>
+	Jérôme Chabod <jerome.chabod@ifrance.com>; initial idea from old
+	gPodder TODO list by Holger Bauer
 
 Wed, 09 Jan 2008 23:09:54 +0100 <thp@perli.net>
 Updated Swedish translation by Anders Kvist
